@@ -48,11 +48,11 @@ class TestGemIndexer < Gem::TestCase
     assert indexer.build_modern
   end
 
-  def test_build_indicies
+  def test_build_indices
     @indexer.make_temp_directories
 
     use_ui @ui do
-      @indexer.build_indicies
+      @indexer.build_indices
     end
 
     specs_path = File.join @indexer.directory, "specs.#{@marshal_version}"
@@ -198,7 +198,7 @@ class TestGemIndexer < Gem::TestCase
     assert_match %r%^Generating latest specs index$%, @ui.output
     assert_match %r%^Generating prerelease specs index$%, @ui.output
     assert_match %r%^Complete$%, @ui.output
-    assert_match %r%^Compressing indicies$%, @ui.output
+    assert_match %r%^Compressing indices$%, @ui.output
 
     assert_equal '', @ui.error
   end
